--- a/web/characterSheet/EditCharacterRecordPage.xhtml
+++ b/web/characterSheet/EditCharacterRecordPage.xhtml
@@ -258,7 +258,7 @@
                   </h:column>
                   <h:column >
                     <h:inputText 
-                      style="font-size: 12px; font-weight: bold; width: 200px; text-align: right" 
+                      style="font-size: 12px; font-weight: bold; width: 200px; text-align: left" 
                       value="#{armRecord.description}"/>
                     <f:facet name="header">
                       <h:outputText escape="false" style="" value="備考"/>
