--- a/web/characterSheet/EditCharacterRecordPage.xhtml
+++ b/web/characterSheet/EditCharacterRecordPage.xhtml
@@ -257,8 +257,8 @@
                     </f:facet>
                   </h:column>
                   <h:column >
-                    <h:inputText 
-                      style="font-size: 12px; font-weight: bold; width: 200px; text-align: left" 
+                    <h:inputTextarea
+                      style="font-size: 12px; font-weight: bold; width: 300px; height: 30px; text-align: left" 
                       value="#{armRecord.description}"/>
                     <f:facet name="header">
                       <h:outputText escape="false" style="" value="備考"/>
