--- a/web/characterSheet/PrintableCharacterRecordPage.xhtml
+++ b/web/characterSheet/PrintableCharacterRecordPage.xhtml
@@ -83,58 +83,61 @@
               <h:outputText id="outputText21" value="キャラ設定"/>
             </h:panelGrid>
             <h:panelGrid id="gridPanel20" styleClass="aPrint">
-              <h:outputText escape="false" id="textArea1" styleClass="bPrint" value="#{printableCharacterSheetController.characterDescription}"/>
+              <h:outputText escape="false" id="textArea1" styleClass="bPrint" 
+                            value="#{printableCharacterSheetController.characterDescription}"/>
             </h:panelGrid>
           </h:panelGrid>
         </h:panelGrid>
         
 
-              <h:panelGrid id="armGridPanel" style="" styleClass="tableGridPrint">
-                <h:outputText styleClass="tableTitleBlackPrint" value="武器"/>
-                <h:dataTable styleClass="gPrint"
-                             value="#{characterSheetController.characterArmRecordList}"
-                             var="armRecord">
-                  <h:column >
-                    <h:outputText style="font-size: 12px; 
+        <h:panelGrid id="armGridPanel" style="" styleClass="tableGridPrint">
+          <h:outputText styleClass="tableTitleBlackPrint" value="武器"/>
+          <h:dataTable styleClass="gPrint"
+                       value="#{characterSheetController.characterArmRecordList}"
+                       var="armRecord">
+            <h:column >
+              <h:outputText style="font-size: 12px; 
                                   font-weight: bold" value="#{armRecord.armId.name}"/>
-                    <f:facet name="header">
-                      <h:outputText escape="false" style="" value="名前"/>
-                    </f:facet>
-                  </h:column>
-                  <h:column >
-                    <h:outputText 
-                      style="font-size: 12px; font-weight: bold" 
-                      value="#{characterSheetController.characterData.getAttackModifiers(armRecord)}"/>
-                    <f:facet name="header">
-                      <h:outputText escape="false" style="" value="ダメージ"/>
-                    </f:facet>
-                  </h:column>
-                  <h:column >
-                    <h:outputText 
-                      style="font-size: 12px; font-weight: bold; width: 30px; text-align: right" 
-                      value="#{armRecord.attackModifier}"/>
-                    <f:facet name="header">
-                      <h:outputText escape="false" style="" value="攻撃修正値"/>
-                    </f:facet>
-                  </h:column>
-                  <h:column >
-                    <h:outputText 
-                      style="font-size: 12px; font-weight: bold; width: 30px; text-align: right" 
-                      value="#{armRecord.damageModifier}"/>
-                    <f:facet name="header">
-                      <h:outputText escape="false" style="" value="ダメージ修正値"/>
-                    </f:facet>
-                  </h:column>
-                  <h:column >
-                    <h:outputText 
-                      style="font-size: 12px; font-weight: bold; text-align: left" 
-                      value="#{armRecord.description}"/>
-                    <f:facet name="header">
-                      <h:outputText escape="false" style="" value="備考"/>
-                    </f:facet>
-                  </h:column>
-                </h:dataTable>
-              </h:panelGrid>          
+              <f:facet name="header">
+                <h:outputText escape="false" style="" value="名前"/>
+              </f:facet>
+            </h:column>
+            <h:column >
+              <h:outputText 
+                style="font-size: 12px; font-weight: bold" 
+                value="#{characterSheetController.characterData.getAttackModifiers(armRecord)}"/>
+              <f:facet name="header">
+                <h:outputText escape="false" style="" value="ダメージ"/>
+              </f:facet>
+            </h:column>
+            <h:column >
+              <h:outputText 
+                style="font-size: 12px; font-weight: bold; width: 30px; text-align: right" 
+                value="#{armRecord.attackModifier}"/>
+              <f:facet name="header">
+                <h:outputText escape="false" style="" value="攻撃修正値"/>
+              </f:facet>
+            </h:column>
+            <h:column >
+              <h:outputText 
+                style="font-size: 12px; font-weight: bold; width: 30px; text-align: right" 
+                value="#{armRecord.damageModifier}"/>
+              <f:facet name="header">
+                <h:outputText escape="false" style="" value="ダメージ修正値"/>
+              </f:facet>
+            </h:column>
+            <!--
+            <h:column >
+              <h:outputText
+                style="font-size: 10px; font-weight: bold; text-align: left; max-width: 200px" 
+                value="#{printableCharacterSheetController.getArmDescription(armRecord)}"/>
+              <f:facet name="header">
+                <h:outputText escape="false" style="" value="備考"/>
+              </f:facet>
+            </h:column>
+            -->
+          </h:dataTable>
+        </h:panelGrid>          
         
         <h:panelGrid columns="2" id="abilityAndSkillGridPanel" style="width: 100%; height: 100%;">
           <h:panelGrid columns="1" id="leftGridPanel" style="height: 100%; width: 390px ; ">
@@ -372,13 +375,16 @@
                     <h:outputText id="outputText148" value="近接攻撃"/>
                   </h:panelGrid>
                   <h:panelGrid id="gridPanel55" style="width: 30px">
-                    <h:outputText id="outputText149" styleClass="bPrint" value="#{printableCharacterSheetController.characterData.meleeAttackBonus}"/>
+                    <h:outputText id="outputText149" styleClass="bPrint" 
+                                  value="#{printableCharacterSheetController.characterData.meleeAttackBonus}"/>
                   </h:panelGrid>
                   <h:panelGrid columns="10" id="gridPanel56" style="width: 260px" styleClass="gPrint">
-                    <h:outputText id="outputText150" value="#{printableCharacterSheetController.characterData.baseAttackTotal}"/>
+                    <h:outputText id="outputText150" 
+                                  value="#{printableCharacterSheetController.characterData.baseAttackTotal}"/>
                     <h:outputText id="outputText151" style="font-size: 10px" value="基本"/>
                     <h:outputText id="outputText152" style="font-size: 8px" value="+"/>
-                    <h:outputText id="outputText154" value="#{printableCharacterSheetController.characterData.attackBonusStrengthBonus}"/>
+                    <h:outputText id="outputText154" 
+                                  value="#{printableCharacterSheetController.characterData.attackBonusStrengthBonus}"/>
                     <h:outputText id="outputText153" style="font-size: 10px" value="筋力"/>
                   </h:panelGrid>
                 </h:panelGrid>
@@ -413,7 +419,9 @@
                   </h:panelGrid>
                 </h:panelGrid>
                 <h:panelGrid id="gridPanel33" style="height: 100%; width: 100%" styleClass="aPrint">
-                  <h:outputText escape="false" id="textArea3" style="height: 120px; width: 100%" styleClass="bPrint" value="#{printableCharacterSheetController.attackDescription}"/>
+                  <h:outputText escape="false" id="textArea3" style="height: 120px; width: 100%" 
+                                styleClass="bPrint" 
+                                value="#{printableCharacterSheetController.attackDescription}"/>
                 </h:panelGrid>
               </h:panelGrid>
               <h:panelGrid id="gridPanel4" style="height: 100%; width: 100%">
