--- a/web/campaignMaster/Edit.xhtml
+++ b/web/campaignMaster/Edit.xhtml
@@ -2,31 +2,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:h="http://java.sun.com/jsf/html">
 
-    <ui:composition template="/campaignMaster/EditTemplate.xhtml">
+  <ui:composition template="/campaignMaster/EditTemplate.xhtml">
 
-        <ui:define name="title">
-            <h:outputText value="キャンペーン『#{campaignMasterController.selectedCampaign.campaignName}』の編集"></h:outputText>
-        </ui:define>
+    <ui:define name="title">
+      <h:outputText value="キャンペーン『#{campaignMasterController.selectedCampaign.campaignName}』の編集"></h:outputText>
+    </ui:define>
 
-        <ui:define name="controlTop">
-            <h:panelGrid style="width: 100%" columns="2">
-                <h:commandButton action="#{campaignMasterController.update}" value="保存"/>                
-                <h:panelGrid style="text-align: right; width: 100%" >
-                    <h:commandButton action="/campaignMaster/List" value="キャンセル"/>                                        
-                </h:panelGrid>
-            </h:panelGrid>
-        </ui:define>              
-                                
-        <ui:define name="controlBottom">
-            <h:commandLink action="#{scenarioRecordController.prepareList()}" value="シナリオ一覧へ"/>
-            <h:panelGrid id="deleteCharaGridPanel1" style="height: 100%; text-align: right; width: 100%">
-                <h:commandButton action="#{campaignMasterController.destroy}" value="削除" style="color: rgb(255, 51, 51)" onclick="return confirm('削除しますか?')"/>                                    
-            </h:panelGrid>                
-        </ui:define>
+    <ui:define name="controlTop">
+      <h:panelGrid style="width: 100%" columns="2">
+        <h:commandButton action="#{campaignMasterController.update}" value="保存"/>                
+        <h:panelGrid style="text-align: right; width: 100%" >
+          <h:commandButton action="/campaignMaster/List" value="キャンセル"/>                                        
+        </h:panelGrid>
+      </h:panelGrid>
+    </ui:define>              
 
-    </ui:composition>
+    <ui:define name="controlBottom">
+      <h:commandLink action="#{scenarioRecordController.prepareList()}" value="シナリオ一覧へ"/>
+      <h:panelGrid id="deleteCharaGridPanel1" style="height: 100%; text-align: right; width: 100%">
+        <h:commandButton action="#{campaignMasterController.destroy}" value="削除" 
+                         style="color: rgb(255, 51, 51)" onclick="return confirm('削除しますか?')"/>                                    
+      </h:panelGrid>                
+    </ui:define>
+
+  </ui:composition>
 
 </html>
