--- a/web/campaignMaster/List.xhtml
+++ b/web/campaignMaster/List.xhtml
@@ -5,45 +5,46 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="キャンペーン一覧"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:form styleClass="jsfcrud_list_form">
-                
-               <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
-                    <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
-                        <h:commandLink action="#{campaignMasterController.prepareCreate}" value="新規キャンペーンの作成"/>
-                    </h:panelGrid>
-                </h:panelGrid>
-                
-                <h:panelGrid style="width: 600px">
-                <h:outputText escape="false" value="#{bundle.ListCampaignMasterEmpty}" rendered="#{campaignMasterController.items.rowCount == 0}"/>
-                <h:panelGroup rendered="#{campaignMasterController.items.rowCount > 0}">
-                    <h:outputText value="#{campaignMasterController.pagination.pageFirstItem + 1}..#{campaignMasterController.pagination.pageLastItem + 1}/#{campaignMasterController.pagination.itemsCount}"/>&nbsp;
-                    <h:commandLink action="#{campaignMasterController.previous}" value="#{bundle.Previous} #{campaignMasterController.pagination.pageSize}" rendered="#{campaignMasterController.pagination.hasPreviousPage}"/>&nbsp;
-                    <h:commandLink action="#{campaignMasterController.next}" value="#{bundle.Next} #{campaignMasterController.pagination.pageSize}" rendered="#{campaignMasterController.pagination.hasNextPage}"/>&nbsp;
-                    <h:panelGrid styleClass="tableGrid">
-                        <h:dataTable value="#{campaignMasterController.items}" rules="all"  var="item" styleClass="left"> 
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="キャンペーン名"/>
-                            </f:facet>
-                            <h:commandLink action="#{campaignMasterController.prepareEdit}" value="#{item.campaignName}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="マスター"/>
-                            </f:facet>
-                            <h:outputText value="#{item.master}"/>
-                        </h:column>
-                    </h:dataTable>
-                    </h:panelGrid>                        
-                </h:panelGroup>
-                </h:panelGrid>                
-            </h:form>
-        </ui:define>
-    </ui:composition>
+  <ui:composition template="/template.xhtml">
+    <ui:define name="title">
+      <h:outputText value="キャンペーン一覧"></h:outputText>
+    </ui:define>
+    <ui:define name="body">
+      <h:form styleClass="jsfcrud_list_form">
+
+        <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
+          <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
+            <h:commandLink action="#{campaignMasterController.prepareCreate}" value="新規キャンペーンの作成"/>
+          </h:panelGrid>
+        </h:panelGrid>
+
+        <h:panelGrid style="width: 600px">
+          <h:outputText escape="false" value="#{bundle.ListCampaignMasterEmpty}" 
+                        rendered="#{campaignMasterController.items.rowCount == 0}"/>
+          <h:panelGroup rendered="#{campaignMasterController.items.rowCount > 0}">
+            <h:outputText value="#{campaignMasterController.pagination.pageFirstItem + 1}..#{campaignMasterController.pagination.pageLastItem + 1}/#{campaignMasterController.pagination.itemsCount}"/>&nbsp;
+            <h:commandLink action="#{campaignMasterController.previous}" value="#{bundle.Previous} #{campaignMasterController.pagination.pageSize}" rendered="#{campaignMasterController.pagination.hasPreviousPage}"/>&nbsp;
+            <h:commandLink action="#{campaignMasterController.next}" value="#{bundle.Next} #{campaignMasterController.pagination.pageSize}" rendered="#{campaignMasterController.pagination.hasNextPage}"/>&nbsp;
+            <h:panelGrid styleClass="tableGrid">
+              <h:dataTable value="#{campaignMasterController.items}" rules="all"  var="item" styleClass="left"> 
+                <h:column>
+                  <f:facet name="header">
+                    <h:outputText value="キャンペーン名"/>
+                  </f:facet>
+                  <h:commandLink action="#{campaignMasterController.prepareEdit}" value="#{item.campaignName}"/>
+                </h:column>
+                <h:column>
+                  <f:facet name="header">
+                    <h:outputText value="マスター"/>
+                  </f:facet>
+                  <h:outputText value="#{item.master}"/>
+                </h:column>
+              </h:dataTable>
+            </h:panelGrid>                        
+          </h:panelGroup>
+        </h:panelGrid>                
+      </h:form>
+    </ui:define>
+  </ui:composition>
 
 </html>
