--- a/web/classMaster/ClassListPage.xhtml
+++ b/web/classMaster/ClassListPage.xhtml
@@ -6,30 +6,32 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="クラス一覧"></h:outputText>
-        </ui:define>
+  <ui:composition template="/template.xhtml">
+    <ui:define name="title">
+      <h:outputText value="クラス一覧"></h:outputText>
+    </ui:define>
 
-        <ui:define name="body">
-            <h:form>
-                    <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
-                        <h:panelGrid id="gridPanel2" style="height: 100%; text-align: right; width: 100%">
-                            <h:commandLink action="#{classMasterController.newClassButton_action}" id="newClassButton" value="新規クラス作成"/>
-                        </h:panelGrid>
-                    </h:panelGrid>
-                    <h:panelGrid id="tableGrid" style="width: 400px; height: 100%;" styleClass="tableGrid">
-                        <h:dataTable binding="#{classMasterController.classTable}" id="classTable" styleClass="w"
-                                     value="#{classMasterController.classMasterList}" var="currentRow">
-                            <h:column id="column1">
-                                <h:commandLink action="#{classMasterController.editClassLink_action()}" id="editClassLink" style="width: 40px" value="#{currentRow.className}" />
-                                <f:facet name="header">
-                                    <h:outputText id="outputText2" value="クラス名"/>
-                                </f:facet>
-                            </h:column>
-                        </h:dataTable>
-                    </h:panelGrid>
-            </h:form>                
-        </ui:define>
-    </ui:composition>
+    <ui:define name="body">
+      <h:form>
+        <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
+          <h:panelGrid id="gridPanel2" style="height: 100%; text-align: right; width: 100%">
+            <h:commandLink action="#{classMasterController.newClassButton_action}" id="newClassButton" 
+                           value="新規クラス作成"/>
+          </h:panelGrid>
+        </h:panelGrid>
+        <h:panelGrid id="tableGrid" style="width: 400px; height: 100%;" styleClass="tableGrid">
+          <h:dataTable binding="#{classMasterController.classTable}" id="classTable" styleClass="w"
+                       value="#{classMasterController.classMasterList}" var="currentRow">
+            <h:column id="column1">
+              <h:commandLink action="#{classMasterController.editClassLink_action()}" id="editClassLink" 
+                             style="width: 40px" value="#{currentRow.className}" />
+              <f:facet name="header">
+                <h:outputText id="outputText2" value="クラス名"/>
+              </f:facet>
+            </h:column>
+          </h:dataTable>
+        </h:panelGrid>
+      </h:form>                
+    </ui:define>
+  </ui:composition>
 </html>
