--- a/web/monsterMaster/Edit.xhtml
+++ b/web/monsterMaster/Edit.xhtml
@@ -2,34 +2,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:h="http://java.sun.com/jsf/html">
 
-    <ui:composition template="/monsterMaster/Edit_template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="モンスター『#{monsterMasterController.selected.name}』の編集"></h:outputText>
-        </ui:define>
+  <ui:composition template="/monsterMaster/Edit_template.xhtml">
+    <ui:define name="title">
+      <h:outputText value="モンスター『#{monsterMasterController.selected.name}』の編集"></h:outputText>
+    </ui:define>
 
-        <ui:define name="controlTop">
-            <h:panelGrid columns="2" style="width: 100%">
-                <h:panelGrid style="text-align: left;width: 100%">
-                    <h:commandButton action="#{monsterMasterController.update}" value="保存"/>                
-                </h:panelGrid>               
-                <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
-                    <h:commandButton action="/monsterMaster/List" id="cancelButton" value="キャンセル" immediate="true"/>
-                </h:panelGrid>                
-            </h:panelGrid>
-        </ui:define>
-        
-        <ui:define name="controlBottom">
-            <h:panelGrid columns="2" style="width: 100%">
-                <h:panelGrid style="text-align: right;width: 100%">
-                    <h:commandButton style="color: #ff0033" onclick="return confirm('削除しますか?')" action="#{monsterMasterController.destroyAndView}"  value="削除"/>            
-                </h:panelGrid>                
-            </h:panelGrid>
-            <br />
-            <br />
-        </ui:define>
-    </ui:composition>
+    <ui:define name="controlTop">
+      <h:panelGrid columns="2" style="width: 100%">
+        <h:panelGrid style="text-align: left;width: 100%">
+          <h:commandButton action="#{monsterMasterController.update}" value="保存"/>                
+        </h:panelGrid>               
+        <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
+          <h:commandButton action="/monsterMaster/List" id="cancelButton" value="キャンセル" immediate="true"/>
+        </h:panelGrid>                
+      </h:panelGrid>
+    </ui:define>
+
+    <ui:define name="controlBottom">
+      <h:panelGrid columns="2" style="width: 100%">
+        <h:panelGrid style="text-align: right;width: 100%">
+          <h:commandButton style="color: #ff0033" onclick="return confirm('削除しますか?')" 
+                           action="#{monsterMasterController.destroyAndView}"  value="削除"/>            
+        </h:panelGrid>                
+      </h:panelGrid>
+      <br />
+      <br />
+    </ui:define>
+  </ui:composition>
 
 </html>
