--- a/web/raceMaster/RaceListPage.xhtml
+++ b/web/raceMaster/RaceListPage.xhtml
@@ -5,29 +5,31 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="種族一覧"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:form>
-                <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
-                    <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
-                        <h:commandLink action="#{raceMasterController.newRaceButton_action}" id="newRaceButton" value="新しい種族作成"/>
-                    </h:panelGrid>
-                </h:panelGrid>
-                <h:panelGrid id="contentsGrid" style="width: 400px; height: 100%;" styleClass="tableGrid">
-                    <h:dataTable binding="#{raceMasterController.raceTable}" id="raceTable" styleClass="w"
-                                 value="#{raceMasterController.raceMasterList}" var="currentRow">
-                        <h:column id="column1">
-                            <h:commandLink action="#{raceMasterController.editRaceLink_action}" id="editRaceLink" value="#{currentRow.raceName}"/>                                
-                            <f:facet name="header">
-                                <h:outputText id="outputText2" value="種族名"/>
-                            </f:facet>
-                        </h:column>
-                    </h:dataTable>
-                </h:panelGrid>
-            </h:form>
-        </ui:define>            
-    </ui:composition>
+  <ui:composition template="/template.xhtml">
+    <ui:define name="title">
+      <h:outputText value="種族一覧"></h:outputText>
+    </ui:define>
+    <ui:define name="body">
+      <h:form>
+        <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
+          <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
+            <h:commandLink action="#{raceMasterController.newRaceButton_action}" id="newRaceButton" 
+                           value="新しい種族作成"/>
+          </h:panelGrid>
+        </h:panelGrid>
+        <h:panelGrid id="contentsGrid" style="width: 400px; height: 100%;" styleClass="tableGrid">
+          <h:dataTable binding="#{raceMasterController.raceTable}" id="raceTable" styleClass="w"
+                       value="#{raceMasterController.raceMasterList}" var="currentRow">
+            <h:column id="column1">
+              <h:commandLink action="#{raceMasterController.editRaceLink_action}" id="editRaceLink" 
+                             value="#{currentRow.raceName}"/>                                
+              <f:facet name="header">
+                <h:outputText id="outputText2" value="種族名"/>
+              </f:facet>
+            </h:column>
+          </h:dataTable>
+        </h:panelGrid>
+      </h:form>
+    </ui:define>            
+  </ui:composition>
 </html> 
